--- a/sass/base/_homePage.scss
+++ b/sass/base/_homePage.scss
@@ -22,7 +22,7 @@
     font-size: 2.2rem;
     @include respond(phone) {
       margin-top: 3rem;
-      font-size: 1.8rem;
+      font-size: 1.9rem;
     }
 
     &__main {
