--- a/sass/components/_projectCard.scss
+++ b/sass/components/_projectCard.scss
@@ -69,6 +69,7 @@
           border-radius: 0.4rem;
           box-decoration-break: clone;
           -webkit-box-decoration-break: clone;
+          overflow: hidden;
         }
       }
 
